// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossPageSelect should render the selected list when the user presses the "view selected link" 1`] = `
<div>
  <div
    class="toolbar-root"
  >
    <nav
      class="navbar navbar-root my-2 items-selected management-bar management-bar-primary navbar-expand"
    >
      <div
        class="container-fluid"
      >
        <ul
          class="nav-root front-nav navbar-nav"
          role="tablist"
        >
          <li
            class="nav-item"
            role="presentation"
          >
            <div
              class="custom-control custom-checkbox"
            >
              <label>
                <input
                  class="custom-control-input"
                  data-testid="select-all-checkbox"
                  type="checkbox"
                  value="false"
                />
                <span
                  class="custom-control-label"
                />
              </label>
            </div>
          </li>
        </ul>
        <div
          class="navbar-form navbar-form-autofit mx-2"
        >
          <div
            class="input-group search"
          >
            <div
              class="input-group-item"
            >
              <input
                class="input-root form-control input-group-inset input-group-inset-after"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  aria-label="Search"
                  class="button-root btn btn-unstyled"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search icon-root"
                    role="presentation"
                  >
                    <use
                      href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <nav
      class="mb-3 subnav-tbar-root subnav-tbar tbar"
    >
      <div
        class="container-fluid"
      >
        <div
          class="tbar-nav"
        >
          <div
            class="tbar-item view-selected-link-container"
          >
            <div
              class="tbar-section text-truncate"
            >
              <button
                class="button-root btn btn-sm btn-unstyled"
                data-testid="view-selected"
                type="button"
              >
                <b>
                  Return to List
                </b>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    class="flex-grow-1 mx-4 table-root"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
      >
        <thead>
          <tr>
            <th />
            <th
              class="table-head-title"
            >
              <a
                class="button-root w-100 btn btn-unstyled"
                href="/?field=name&page=1&sortOrder=DESC"
              >
                <div
                  class="align-items-center d-flex justify-content-between"
                >
                  <div
                    class="text-truncate"
                  >
                    name
                  </div>
                  <button
                    aria-label="Ascending"
                    class="component-action ml-2 btn btn-sm btn-primary"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                      role="presentation"
                    >
                      <use
                        href="#order_arrow_ascending"
                      />
                    </svg>
                  </button>
                </div>
              </a>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="clickable table-active"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="true"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              orange
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <nav
    class="navbar navbar-root pagination-bar-root"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown dropdown-root pagination-items-per-page"
      >
        <button
          aria-controls="clay-dropdown-menu-2"
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle button-root btn btn-sm btn-secondary"
          type="button"
        >
          2 Items
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom ml-2"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
      </div>
      <div
        class="pagination-results"
      >
        Showing 1 to 1 of 1 entry.
      </div>
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <button
            class="button-root btn btn-unstyled page-link btn btn-primary"
            disabled=""
            href=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-left-small"
              />
            </svg>
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            class="button-root btn btn-unstyled page-link btn btn-primary"
            href=""
            type="button"
          >
            1
          </button>
        </li>
        <li
          class="page-item disabled"
        >
          <button
            class="button-root btn btn-unstyled page-link btn btn-primary"
            disabled=""
            href=""
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-right-small"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`CrossPageSelect should render the server data list by default 1`] = `
<div>
  <div
    class="toolbar-root"
  >
    <nav
      class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
    >
      <div
        class="container-fluid"
      >
        <ul
          class="nav-root front-nav navbar-nav"
          role="tablist"
        >
          <li
            class="nav-item"
            role="presentation"
          >
            <div
              class="custom-control custom-checkbox"
            >
              <label>
                <input
                  class="custom-control-input"
                  data-testid="select-all-checkbox"
                  type="checkbox"
                  value="false"
                />
                <span
                  class="custom-control-label"
                />
              </label>
            </div>
          </li>
        </ul>
        <div
          class="navbar-form navbar-form-autofit mx-2"
        >
          <div
            class="input-group search"
          >
            <div
              class="input-group-item"
            >
              <input
                class="input-root form-control input-group-inset input-group-inset-after"
                placeholder="Search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  aria-label="Search"
                  class="button-root btn btn-unstyled"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search icon-root"
                    role="presentation"
                  >
                    <use
                      href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    class="flex-grow-1 mx-4 table-root"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
      >
        <thead>
          <tr>
            <th />
            <th
              class="table-head-title"
            >
              <a
                class="button-root w-100 btn btn-unstyled"
                href="/?field=name&page=1&sortOrder=DESC"
              >
                <div
                  class="align-items-center d-flex justify-content-between"
                >
                  <div
                    class="text-truncate"
                  >
                    name
                  </div>
                  <button
                    aria-label="Ascending"
                    class="component-action ml-2 btn btn-sm btn-primary"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                      role="presentation"
                    >
                      <use
                        href="#order_arrow_ascending"
                      />
                    </svg>
                  </button>
                </div>
              </a>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="clickable"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              orange
            </td>
          </tr>
          <tr
            class="clickable"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              apple
            </td>
          </tr>
          <tr
            class="clickable"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              banana
            </td>
          </tr>
          <tr
            class="clickable"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              grapefruit
            </td>
          </tr>
          <tr
            class="clickable"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              strawberry
            </td>
          </tr>
          <tr
            class="clickable"
          >
            <td>
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                    value="false"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </td>
            <td>
              tangerine
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <nav
    class="navbar navbar-root pagination-bar-root"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown dropdown-root pagination-items-per-page"
      >
        <button
          aria-controls="clay-dropdown-menu-1"
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle button-root btn btn-sm btn-secondary"
          type="button"
        >
          2 Items
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom ml-2"
            role="presentation"
          >
            <use
              href="#caret-bottom"
            />
          </svg>
        </button>
      </div>
      <div
        class="pagination-results"
      >
        Showing 1 to 2 of 6 entries.
      </div>
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            disabled=""
            href="/?page=0"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-left-small"
              />
            </svg>
          </a>
        </li>
        <li
          class="page-item active"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=1"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=2"
          >
            2
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=3"
          >
            3
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            class="button-root btn btn-unstyled page-link"
            href="/?page=2"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right-small icon-root"
              role="presentation"
            >
              <use
                href="#angle-right-small"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`ViewSelectedToggle should render with the "return to list" message 1`] = `
<div>
  <button
    class="button-root btn btn-sm btn-unstyled"
    data-testid="view-selected"
    type="button"
  >
    <b>
      Return to List
    </b>
  </button>
</div>
`;

exports[`ViewSelectedToggle should render with the "view selected" message 1`] = `
<div>
  <button
    class="button-root btn btn-sm btn-unstyled"
    data-testid="view-selected"
    type="button"
  >
    <b>
      View Selected ()
    </b>
  </button>
</div>
`;
